test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-delete-downstream/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-data-sync-delete-downstream-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
